--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.59",
-    "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
+    "react-art": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-native": "^0.70.1",
+    "react-native-web": "^0.18.9",
+    "react-router-dom": "^6.4.1",
+    "react-router-native": "^6.4.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.21",
+    "@types/react-native": "^0.70.3"
   }
 }
