--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rneui/base": "^0.0.0-edge.2",
+    "@rneui/themed": "^0.0.0-edge.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,7 +15,10 @@
     "react-art": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.70.1",
+    "react-native-safe-area-context": "^4.3.4",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.9",
+    "react-native-web-linear-gradient": "^1.1.2",
     "react-router-dom": "^6.4.1",
     "react-router-native": "^6.4.1",
     "react-scripts": "^5.0.1",
