--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-art": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-faq-component": "^1.3.4",
     "react-native": "^0.70.1",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-vector-icons": "^9.2.0",
@@ -21,7 +22,8 @@
     "react-native-web-linear-gradient": "^1.1.2",
     "react-router-dom": "^6.4.1",
     "react-router-native": "^6.4.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
+    "styled-components": "^5.3.6",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
